--- a/.travis.yml
+++ b/.travis.yml
@@ -9,28 +9,32 @@ dist: trusty
 osx_image: xcode9.3
 env:
   - DANGER=1
-  - TEST=iOS
-  - TEST=Unix
-  - TEST=watchOS
-  - TEST=tvOS
-  - TEST=iOS-Example
-  - TEST=SPM
 matrix:
-    exclude:
-      - os: osx
-        env: DANGER=1
-        
-      - os: linux
-        env: TEST=iOS
-
-      - os: linux
-        env: TEST=watchOS
-
-      - os: linux
-        env: TEST=tvOS
-
-      - os: linux
-        env: TEST=iOS-Example
+    include:
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4 RxSwift.podspec
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4 RxCocoa.podspec
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4 RxBlocking.podspec
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4 RxTest.podspec
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4.2 RxSwift.podspec
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4.2 RxCocoa.podspec
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4.2 RxBlocking.podspec
+      - osx_image: xcode10
+        os: osx
+        env: BUILD=pod lib lint --swift-version=4.2 RxTest.podspec
 
 notifications:
   slack: rxswift:3ykt2Z61f8GkdvhCZTYPduOL
@@ -43,18 +47,28 @@ install:
 
 script: 
   - if [[ `uname` == "Linux" ]] ; then
-        swiftenv install swift-4.0 || true;
+        swiftenv install swift-4.2 || true;
     fi
-  - if [[ "${DANGER}" -eq 1 ]] ; then
-       bundle install --path vendor/bundle;
-       bundle exec danger --verbose;
+  - ${BUILD}; exit -1;
+    if [[ ! -z "${BUILD}" ]] ; then
+      gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet;
+      if [[ "${BUILD}" =~ ^pod[[:space:]].* ]]; then
+         echo "It would be running"
+      fi;
+      
     else
-      if [[ `uname` == "Darwin" ]] ; then
+      exit -1;
+      if [[ "${DANGER}" -eq 1 ]] ; then
+        bundle install --path vendor/bundle;
+        bundle exec danger --verbose;
+      else
+        if [[ `uname` == "Darwin" ]] ; then
           xcodebuild -version;
           xcodebuild -showsdks;
-      fi;
-      swift --version;
-      TRAVIS=1 ./scripts/all-tests.sh "${TEST}";
+        fi;
+        swift --version;
+        TRAVIS=1 ./scripts/all-tests.sh "${TEST}";
+      fi
     fi
 
 after_success:
